--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
 </head>
 
 <body>
-    
+    <div id="gif-container">
+<div id="gif">
+<img class="center" src="https://media.giphy.com/media/7hHzmMCS2MCgE/giphy.gif" height="200" width="200">
+</div>
+
+    </div>
 
     <div class="container">
         <header class="header">
